# Multi-Target-EBS-Tracking

./: .gitignore  CMakeLists.txt  _w  conanfile.txt  config.json  controller.h  main.cpp  pointing.h  progressbar.h  readme.md  structure.md  threads.h  utils.h  validator.h  videos.h
cmake/modules/: FindVimbaCPP.cmake
data/: testevents.csv
ebs-tracking/: Algorithm.hpp  Kalman-NN.hpp  base-classes.hpp  dbscan-detector.hpp  gmphd.hpp  kalman.hpp  meanshift-detector.hpp  reader.hpp
ebs-tracking/gifs/: compile.sh  eframes.txt  gifMaker.hpp  giftest.cpp  makeGif  run.gp  tframes.txt
ebs-tracking/lroc/: LROC.hpp  dbgmphdLROC.cpp  dbknnLROC.cpp  msknnLROC.cpp
ebs-tracking/misc/: citations.txt  run.sh
ebs-tracking/test/: armatest.cpp  compile.sh  test.cpp  testBase.cpp  testGmphd.cpp  testKalman-NN.cpp  testLROC.cpp  testLine.cpp
